@@ -13,7 +13,7 @@ import lombok.RequiredArgsConstructor;
 import org.springframework.stereotype.Service;
 
 import java.util.List;
-import java.util.stream.Collectors;
+
 
 @Service
 @RequiredArgsConstructor
@@ -53,7 +53,7 @@ public class MenuServiceImpl implements MenuService {
                     MenuResponse menuResponse = new MenuResponse();
                     prepareResponse(menu, menuResponse);
                     return menuResponse;
-                }).collect(Collectors.toList());
+                }).toList();
     }
 
     @Override
